# tenyson

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  a100_unsloth_vllm_only_probe.py  ayush.txt  pyproject.toml  requirements-inference.txt  run_inference.py  run_inference.sh  scratch_adapter_probe.py  scratch_reference_eval.py  t4_same_probe_only_gpu_changed.py  train_sft_full_finetune.py  unsloth_fastinf_fullft_a100_issue.md  unsloth_fastinf_fullft_a100_repro.py  unsloth_fastinf_fullft_colab_repro.py
.tenyson/: modal_gpu_probe.py
tenyson/: README.md  pyproject.toml
tenyson/config_templates/: eval.yaml  rl.yaml  sft.yaml
tenyson/examples/wordle/: experiment.py  report_template.md  run.env.example  wordle_task.py
tenyson/examples/wordle/configs/: eval_config.yaml  rl_config.yaml  sft_config.yaml
tenyson/src/tenyson/: __init__.py  bootstrap.py  ctl.py  experiment.py  loader.py  pipeline.py  runner.py
tenyson/src/tenyson/cloud/: aws.py  base.py  manager.py  modal.py  rds_access.py  runtime_deps.py
tenyson/src/tenyson/core/: control.py  execution_policy.py  hf_checkpoint.py  hub_push.py  notify.py  plugin.py  run_config.py  run_name.py  telemetry.py  wandb_store.py
tenyson/src/tenyson/jobs/: eval.py  hf_repo.py  result.py  rl.py  sft.py  sft_collator.py
tenyson/src/tenyson/reporting/: builder.py  fixed.py
tenyson/tests/: test_bootstrap.py  test_control.py  test_environment_contract.py  test_experiment.py  test_job_fixes.py  test_modal_manager.py  test_pipeline.py  test_rds_access.py  test_reporting.py  test_sft_job.py
(+164 files in other folders)
